# Ecommerce-Customer-Analysis

./: .pre-commit-config.yaml  README.md  app.py  main.py  pyproject.toml  setup.py  template.py
.github/workflows/: actions.yaml
.streamlit/: config.toml
conf/: configs.yaml  schema.yaml
data/processed/: customers.csv
data/test/: test_array.npy  test_data.csv
data/train/: train_array.npy  train_data.csv
models/predictions/: test_preds.npy  train_preds.npy
models/preprocessors/: preprocessor.pkl
models/scores/: lr_model_scores.json
models/trained/: lr_model.pkl
notebooks/: 01_data_exploration.ipynb  02_data_transformations.ipynb  02_model_experiments.ipynb  03_modelling_experiments.ipynb
reports/: .gitkeep
src/: constants.py  logger.py
src/components/: data_ingestion.py  data_prep.py  data_preparation.py  data_preprocessor.py  data_splitter.py  data_trainsformation.py  model_evaluation.py  model_evaluator.py  model_prediction.py  model_trainer.py
src/pipelines/: stage_01_data_ingestion.py  stage_01_data_preparation.py  stage_02_data_splitting.py  stage_03_data_preprocessing.py  stage_04_model_trainer.py  stage_05_model_evaluation.py
src/utils/: basic_utils.py  model_utils.py
